--- a/package.json
+++ b/package.json
@@ -19,8 +19,25 @@
   },
   "homepage": "https://github.com/roseline124/study-buddies-server#readme",
   "devDependencies": {
+    "@types/compression": "^1.7.0",
+    "@types/express": "^4.17.7",
+    "@types/graphql": "^14.5.0",
+    "@types/graphql-depth-limit": "^1.1.2",
+    "@types/node": "^14.0.22",
+    "graphql-depth-limit": "^1.1.0",
+    "graphql-import": "^1.0.2",
+    "graphql-import-node": "0.0.4",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.6"
+  },
+  "dependencies": {
+    "apollo-server-express": "^2.15.1",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "graphql": "^15.3.0",
+    "http": "0.0.1-security",
+    "ncp": "^2.0.0"
   }
 }
