add script for build

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "npm run start:dev",
-    "start:dev": "nodemon 'src/server.ts' --exec 'ts-node' src/server.ts -e ts,graphql"
+    "start:dev": "nodemon 'src/server.ts' --exec 'ts-node' src/server.ts -e ts,graphql",
+    "start": "node 'dist/server.js'",
+    "build": "tsc -p . && ncp src/schema dist/schema"
   },
   "repository": {
     "type": "git",
