--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "npm run start:dev",
     "start:dev": "nodemon 'src/server.ts' --exec 'ts-node' src/server.ts -e ts,graphql",
     "start": "node 'dist/server.js'",
-    "build": "tsc -p . && ncp src/schema dist/schema"
+    "build": "tsc -p . && ncp src/schema dist/schema",
+    "lint": "eslint --fix src/**/*.ts"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,11 @@
     "@types/graphql": "^14.5.0",
     "@types/graphql-depth-limit": "^1.1.2",
     "@types/node": "^14.0.22",
+    "@typescript-eslint/eslint-plugin": "^3.6.0",
+    "@typescript-eslint/parser": "^3.6.0",
+    "eslint": "^7.4.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0",
     "graphql-depth-limit": "^1.1.0",
     "graphql-import": "^1.0.2",
     "graphql-import-node": "0.0.4",
