--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "npm run start:dev",
-    "start:dev": "nodemon 'src/server.ts' --exec 'ts-node' src/server.ts -e ts,graphql"
+    "start:dev": "nodemon 'src/server.ts' --exec 'ts-node' src/server.ts -e ts,graphql",
+    "gql-gen": "graphql-codegen --config codegen.yml"
   },
   "repository": {
     "type": "git",
@@ -19,8 +20,14 @@
   },
   "homepage": "https://github.com/roseline124/study-buddies-server#readme",
   "devDependencies": {
+    "@graphql-codegen/cli": "1.17.0",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.6"
+    "typescript": "^3.9.6",
+    "@graphql-codegen/typescript": "1.17.0",
+    "@graphql-codegen/typescript-resolvers": "1.17.0"
+  },
+  "dependencies": {
+    "graphql": "^15.3.0"
   }
 }
