--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "apollo-server-express": "^2.15.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
     "http": "0.0.1-security",
