--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "homepage": "https://github.com/roseline124/study-buddies-server#readme",
   "devDependencies": {
+    "@types/jest": "^26.0.4",
+    "jest": "^26.1.0",
     "nodemon": "^2.0.4",
+    "ts-jest": "^26.1.2",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.6"
   }
