--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start:dev": "nodemon 'src/server.ts' --exec 'ts-node' src/server.ts -e ts,graphql",
     "start": "node 'dist/server.js'",
     "build": "tsc -p . && ncp src/schema dist/schema",
-    "lint": "eslint --fix src/**/*.ts"
+    "lint": "eslint --fix src/**/*.ts",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
