--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "graphql-import-node": "0.0.4",
     "nodemon": "^2.0.4",
     "ts-jest": "^26.1.2",
+    "sequelize-cli": "^6.2.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.6"
   },
