--- a/package.json
+++ b/package.json
@@ -49,13 +49,17 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "graphql": "^15.3.0",
     "graphql-depth-limit": "^1.1.0",
     "graphql-import-node": "^0.0.4",
     "http": "0.0.1-security",
+    "install": "^0.13.0",
     "jest": "^26.1.0",
     "mysql2": "^2.1.0",
+    "passport": "^0.4.1",
     "passport-google": "^0.3.0",
+    "passport-google-oauth20": "^2.0.0",
     "sequelize": "^6.3.3",
     "ts-jest": "^26.1.2",
     "typescript": "^3.9.6"
