Add passport-google strategy & configs

--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "@types/graphql": "^14.5.0",
     "@types/graphql-depth-limit": "^1.1.2",
     "@types/jest": "^26.0.4",
+    "@types/passport-google-oauth": "^1.0.41",
+    "@types/passport-google-oauth20": "^2.0.3",
     "apollo-server-express": "^2.15.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -59,6 +61,7 @@
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
     "passport-google": "^0.3.0",
+    "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0",
     "sequelize": "^6.3.3",
     "ts-jest": "^26.1.2",
