--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "@types/compression": "^1.7.0",
+    "@types/express-mysql-session": "^2.1.1",
     "@types/express-session": "^1.17.0",
     "@types/graphql": "^14.5.0",
     "@types/graphql-depth-limit": "^1.1.2",
