--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/graphql": "^14.5.0",
     "@types/graphql-depth-limit": "^1.1.2",
     "@types/jest": "^26.0.4",
+    "@types/lodash": "^4.14.157",
     "@types/passport-google-oauth": "^1.0.41",
     "@types/passport-google-oauth20": "^2.0.3",
     "apollo-server-express": "^2.15.1",
@@ -64,6 +65,7 @@
     "http": "0.0.1-security",
     "install": "^0.13.0",
     "jest": "^26.1.0",
+    "lodash": "^4.17.19",
     "mysql2": "^2.1.0",
     "open-graph-scraper": "^4.4.0",
     "passport": "^0.4.1",
