--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "ts-node": "^8.10.2"
   },
   "dependencies": {
+    "@graphql-tools/load-files": "^6.0.14",
+    "@graphql-tools/merge": "^6.0.14",
     "@types/compression": "^1.7.0",
     "@types/express-mysql-session": "^2.1.1",
     "@types/express-session": "^1.17.0",
